# lucky-you

./: .gitignore  LICENSE  README.md  README_cn.md  index.html  package-lock.json  package.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-auto-release.yaml  release-tauri-app.yml  release-windows-debug-app.yml
public/: index.html
src/: App.vue  main.js  util.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DonateDialog.vue  FooterComponent.vue  OpenLinkInBrowser.vue  SettingsDialog.vue
src/locale/: en_US.json  zh_CN.json
