[package]
name = "LuckyYou"
version = "1.1.1"
description = "A cross platform app to choose lucky you based on tauri"
authors = [ "Wenjian Jiang" ]
license = "CC BY-NC-ND 3.0"
repository = "https://github.com/jwenjian/lucky-you"
default-run = "LuckyYou"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.7.5", features = [ "all-api", "edge", "cli" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "LuckyYou"
path = "src/main.rs"
